src/sass/partials/formulas.scss
/* formulas
------------------------------------------------- */

.formulas {
  .list {
    .saved-formula {
      border-radius: $border-radius-medium;
      overflow: hidden;
      margin: 0 0 1px 0;
      padding: 0;
      z-index: 2;
      opacity: 1;
      transition: all $transition-ease-medium;
      &.sortable-chosen {
        opacity: 1;
      }
      &.sortable-ghost {
        opacity: 0.2;
      }
      &:only-child {
        margin: 0;
      }
      &:last-child {
        margin: 0;
      }
      .name {
        background-color: $secondary-color;
        height: 40px;
        line-height: 40px;
        font-size: 1rem;
        &:hover {
          background-color: $secondary-color-dark;
        }
        &:focus {
          background-color: $secondary-color-light;
        }
      }
      .roll {
        .button {
          border-radius: 0 $border-radius-medium $border-radius-medium 0;
        }
      }
      .clear {
        background-color: $secondary-color;
        .button {
          border-left: 0;
          border-top: 0;
          border-bottom: 0;
          border-radius: $border-radius-medium 0 0 $border-radius-medium;
        }
      }
      .formula {
        background-color: $secondary-color;
        p {
          height: 40px;
          line-height: 40px;
          font-size: 1rem;
          padding: 0 10px 0 0;
          margin: 0;
          text-align: right;
        }
        .number-of-dice,
        .number-of-bonus {
          color: $gray-10;
        }
        .dice {
          color: $gray-13;
        }
      }
      .button {
        height: 40px;
        line-height: 40px;
        [class^="icon-"],
        [class*=" icon-"] {
          margin: 0;
          font-size: 1.2rem;
          height: 40px;
          line-height: 40px;
        }
      }
    }
  }
}


/* media queries
------------------------------------------------- */

@media (min-width: $screen-sm) {}

@media (min-width: $screen-md) {}

@media (min-width: $screen-lg) {}

@media (min-width: $screen-xl) {}

